# claimgate

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_verdict.md
.github/workflows/: ci.yml
claimgate/: __init__.py  __main__.py  cli.py
claimgate/adapters/: __init__.py  stub.py
claimgate/benches/: baseline_duel.py  exact_stress.py  replay_drift.py  tool_routing.py  v0_baseline.py  v2_certificate.py  v2_deepchain.py  v2_holdout.py  v2_warmpower.py  var_lane.py
claimgate/core/: canonical.py  duel.py  exact.py  families.py  report.py  schema.py  v0_scores.py  verifier.py
docs/: BENCHMARK_CARD.md  CONTAMINATION_POLICY.md  DATASET_CARD.md  DEMO.md  EXAMPLES.md  LEADERBOARD_SPEC.md  LIMITATIONS.md  MATH_BENCHMARK.md  README.md  RED_TEAM_CASES.md  REPRODUCIBILITY.md
docs/EXAMPLE_REPORTS/: claimgate_example.json  claimgate_viral_demo.json  evidencepack_example.json  math_hardening_example.json  physicsgate_example.json  replayrunner_example.json  theorygate_example.json
proofbench_x/: __init__.py  __main__.py  cli.py
proofbench_x/benches/: __init__.py  counterexample.py  holdout.py  metamorphic.py  v0_baseline.py  v2_counterexample.py  v2_disguise.py  v2_exactness.py  v2_parser.py  v2_refusal.py  v2_routing.py  warm_power.py
proofbench_x/core/: __init__.py  certificate.py  counterexamples.py  metamorphic.py  routing.py  scores.py  v0_scores.py
results/: math_benchmark_scoreboard.json
tests/: test_claimgate.py  test_proofbench_x.py
(+74 files in other folders)
