[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claimgate"
version = "1.0.0rc0"
description = "Extract scientific/AI claims and route each to a deterministic verification gate (proof-aware verification benchmark prototype)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Kyal" }]
keywords = ["verification", "claims", "dimensional-analysis", "evidence", "reproducibility", "benchmark"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kyal102/claimgate"
Issues = "https://github.com/kyal102/claimgate/issues"

[project.scripts]
claimgate = "claimgate.cli:main"

[tool.setuptools.packages.find]
include = ["claimgate*"]
